# whisper

./: .gitignore  README.md  install.sh  package.json  setup.sh
docs/plans/: 2026-03-07-whispr-design.md  2026-03-07-whispr-implementation.md
src/: overlay.html  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  context.rs  llm.rs  main.rs  paste.rs  transcribe.rs
