[package]
name = "whispr"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
whisper-rs = "0.15"
cpal = "0.15"
core-graphics = "0.24"
tokio = { version = "1", features = ["sync"] }
arboard = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
