[package]
name = "whisper"
version = "0.2.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = "0.15"
cpal = "0.15"
core-graphics = "0.24"
tokio = { version = "1", features = ["sync", "time"] }
arboard = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
